package com.fleeTheRoom.models.level;

public interface LevelObserver {

    void levelChanged();
}
